# generative_variational_reg

./: .gitignore  README.md  conv_incr_reg.py  gen_reg.py  matpy.py  pyproject.toml  reproduce_generative_regularization_results.py  reproduce_tgv_results.py  workstation_sync.py
receive_dir/experiments/tgv/deconvolution/: psnr_results.txt
receive_dir/experiments/tgv/denoising/: psnr_results.txt
receive_dir/experiments/tgv/inpainting/: psnr_results.txt
scripts/: conv_incr_reg.py  demo.py  imagenet_random_gen_reg.py  imagenet_random_tgv.py  imagenet_texture_gen_reg.py  imagenet_texture_tgv.py  reproduce_generative_regularization_results.py  reproduce_tgv_results.py  save_network_parts.py
scripts/barbara_network/: nice_image.tex
scripts/imsource/corrupted/deconvolution/: barbara_crop_corrupted.npy  cart_text_mix_corrupted.npy  fish_corrupted.npy  patchtest_corrupted.npy  zebra_corrupted.npy
scripts/imsource/corrupted/denoising/: barbara_crop_corrupted.npy  cart_text_mix_corrupted.npy  fish_corrupted.npy  patchtest_corrupted.npy  zebra_corrupted.npy
scripts/imsource/corrupted/inpainting/: cart_text_mix_mask.npy  fish_mask.npy  patchtest_mask.npy  zebra_mask.npy
scripts/imsource/tgv_data/deconv/: barbara_crop.pkl  cart_text_mix.pkl  expl_data  patchtest.pkl
scripts/imsource/tgv_data/denoising/: barbara_crop.pkl  cart_text_mix.pkl  patchtest.pkl
scripts/imsource/tgv_data/inpainting/: barbara_crop.pkl  cart_text_mix.pkl  patchtest.pkl
source/: gen_reg.py  libjpeg.py  matpy.py
