[tool.poetry]
name = "generative_variational_reg"
version = "0.1.0"
description = ""
authors = ["habring <andreas.habring@uni-graz.at>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.4.3"
pyopencl = "^2021.2.9"
numpy = "^1.21.4"
scipy = "^1.7.2"
cffi = "^1.15.0"
ipdb = "^0.13.9"
scikit-image = "^0.18.3"
Mako = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
